--- a/vcweb/lighterprints/templates/lighterprints/mobile/index.html
+++ b/vcweb/lighterprints/templates/lighterprints/mobile/index.html
@@ -737,7 +737,7 @@ data-bind="text: averagePoints"></span>
                         You have been randomly placed in a group of <strong>5 participants</strong>. 
                         In this experiment you can perform virtual actions that represent green alternatives to some common daily  
                         activities.  Some of these activities are available all day, and others are only available at 
-                        specific times.  You can learn more about them by clicking on the <a href="#challengesPage">Challenges tab</a>
+                        specific times.  You can learn more about them by clicking on the <a href="#challengesPage" style="text-decoration: none;">Challenges tab</a>
                         and selecting an activity.
                     </p>
                     <h4>Challenges, Green Points, and Levels</h4>
@@ -760,9 +760,9 @@ data-bind="text: averagePoints"></span>
                     </p>
                     <h4>How to participate</h4>
                     <p>
-                        To participate, simply click on the <a href="#challengesPage">Challenges tab</a>, and select a challenge you"d like to perform. 
-                        You can leave messages for the other members n your group via the <a href="#myTeamPage">My Group tab</a>
-                        or use the <a href="#dashboardPage">Dashboard</a>
+                        To participate, simply click on the <a href="#challengesPage" style="text-decoration: none;">Challenges tab</a>, and select a challenge you"d like to perform. 
+                        You can leave messages for the other members n your group via the <a href="#myTeamPage" style="text-decoration: none;">My Group tab</a>
+                        or use the <a href="#dashboardPage" style="text-decoration: none;">Dashboard</a>
                         to view your group"s progress.
                     </p>
                 </div>
@@ -770,7 +770,7 @@ data-bind="text: averagePoints"></span>
                     <h4>Frequently Asked Questions</h4>
                     <ul data-role="listview" data-inset="true" data-theme="b">
                         <li>
-                            <h4 style="white-space: normal;!">I performed an activity worth 15 points but only 3 points were added to Today"s Progress and Today's Score.  Why?</h4>
+                            <h4 style="white-space: normal;!">I performed an activity worth 15 points but only 3 points were added to Today's Progress and Today's Score.  Why?</h4>
                             <p style="white-space: normal;!">
                                 The numbers in Today"s Score Today"s Progress represent your group"s <b>average number of earned green points</b>.  If there are 5
                                 people in your group, performing a 15 point activity adds 3 points to the group average (15 / 5 = 3).
