--- a/vcweb/lighterprints/templates/lighterprints/mobile/index.html
+++ b/vcweb/lighterprints/templates/lighterprints/mobile/index.html
@@ -255,8 +255,8 @@ data-bind="text: averagePoints"></span>
 	</script>
 	<script type='text/html' id='myTeam-template'>
 			<li>
-                                	<span style="color:#5c5d5b;">Participant <span data-bind="text: participant_number"></span> </span><br><span data-bind="text: value"></span>
-                   					<span style="color:#5c5d5b;" class="ui-li-aside" data-bind="text: date_created"></span>
+                                	<span style="color:#42555e;">Participant <span data-bind="text: participant_number"></span> </span><br><span data-bind="text: value"></span>
+                   					<span style="color:#42555e;" class="ui-li-aside" data-bind="text: date_created"></span>
                             </li>
 	</script>
     <script type='text/html' id='no-group-activity-template'>
